# Priori

./: .gitignore  CMakeLists.txt  README.md  README.txt  index.html  license.txt  params.json
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: FindPriori.cmake
include/priori/: export.h  priori.h
src/: benchmark.cpp  priori.cpp  test.cpp
test/: CMakeLists.txt  test.cpp
